FIx: env.example docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-PORT = number
+PORT=number
 
-DATABASE_HOST = string
-DATABASE_PORT = number
-DATABASE_USERNAME = string
-DATABASE_PASSWORD = string
-DATABASE_DATABASE_NAME = string
+DATABASE_HOST=string
+DATABASE_PORT=number
+DATABASE_USERNAME=string
+DATABASE_PASSWORD=string
+DATABASE_DATABASE=string
 
-REDIS_HOST = string
-REDIS_PORT = number
+JWT_SECRET=string
+JWT_EXPIRE=string
+JWT_REFRESH_EXPIRE=string
