--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,6 @@ services:
       - .env
     environment:
       - MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD}
-      - MYSQL_DATABASE=hackerthon
+      - MYSQL_DATABASE=${DATABASE_DATABASE}
       - MYSQL_PASSWORD=${DATABASE_PASSWORD}
       - MYSQL_USER=${DATABASE_USERNAME}
