--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.6",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.6",
+    "@nestjs/event-emitter": "^1.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/swagger": "^5.0.9",
@@ -32,6 +33,8 @@
     "axios": "^0.21.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "eventemitter2": "^6.4.5",
+    "hbs": "^4.1.2",
     "js-sha512": "^0.8.0",
     "mysql2": "^2.3.0",
     "reflect-metadata": "^0.1.13",
